Construct GatewayConfig interface